fix stretcher linkes

--- a/src/css/city/about-city.scss
+++ b/src/css/city/about-city.scss
@@ -100,6 +100,13 @@
   }
 
 }
+.aligncenter {
+  clear: both;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 html :where(img[class*=wp-image-]) {
   border-radius: 15px;
   width: 90%;
